syntax = "proto3";

option csharp_namespace = "Members";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package members;

service Membership {
    rpc GetMembersStream(google.protobuf.Empty) returns (stream MemberOut);

    rpc SetMember(MemberIn) returns (google.protobuf.Empty);
}

message MemberIn {
    string name = 1;
    int32 age = 2;
    string address = 3;
    string city = 4;
    string post_code = 5;
    google.protobuf.Timestamp dob = 6;
}

message MemberOut {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
    string city = 5;
    string post_code = 6;
    google.protobuf.Timestamp dob = 7;
}