syntax = "proto3";

option csharp_namespace = "NewUser";

import "google/protobuf/timestamp.proto";

package user;

service NewUser {
    rpc AddUser(User) returns (UserValid);
}

message User {
    string first_name = 2;
    string last_name = 3;
    string address = 4;
    string city = 5;
    string post_code = 6;
    google.protobuf.Timestamp dob = 7;
}

message UserValid {
    bool valid = 1;
    string error_message = 2;
}